--- a/day-1/137-CA-Day1.tex
+++ b/day-1/137-CA-Day1.tex
@@ -115,7 +115,6 @@
 	\item  {\bf Before next class:}
 		\begin{itemize} \normalsize
 			\item {\bf Watch videos 1.1, 1.2, 1.3 }
-			\item Download next class slides.  \\No need to look at them.
 		\end{itemize}
 	\vfill
 \end{itemize}
@@ -137,7 +136,7 @@
 \end{frame}
 %-------------------------
 \begin{frame}
-	\includegraphics[scale=.15]{137_1819_GradesVsPS}
+	\includegraphics[width=\textwidth]{137_1819_GradesVsPS}
 \end{frame}
 %------------------------------
 \begin{frame}{Quick exercise}
