--- a/unit-1/137-CA-01.tex
+++ b/unit-1/137-CA-01.tex
@@ -71,6 +71,7 @@
 
 %===========================
 
+\setbeamertemplate{enumerate items}{(\Alph{enumi})}
 
 %===================================================
 \begin{document}
@@ -83,7 +84,10 @@
 %------------------------------
 
 \begin{frame}
-\frametitle{Warm-up}
+\frametitle{MAT137 Lecture 2}
+
+\textbf{Warmup:}
+\vfill
 
 What are the following sets?
 
@@ -94,6 +98,13 @@ What are the following sets?
 	\item  $[0,0]$
 	\item  $(0,0)$
 \end{enumerate}
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 1.4, 1.5, 1.6 }
+		\end{itemize}
+	\vfill
 \end{frame}
 
 
@@ -105,30 +116,15 @@ What are the following sets?
 
 What are the following sets? 
 
+	{\small Write the explicitly or with interval notation}
+
+	\bigskip
 	\begin{enumerate} 
 		\item  \DS{A = \{ x \in \Z : x^2 < 6\} }
 		\item  \DS{B = \{ x \in \N : x^2 < 6\} }
 		\item  \DS{C = \{ x \in \R : x^2 < 6\} }
 	\end{enumerate}
 \end{frame}
-
-%-----------------------------
-
-\begin{frame}
-\frametitle{Describing a new set}
-
-An irrational number is a number that is real but not rational.
-
-\
-
-
-$B$ is the set of positive, rational numbers and negative, irrational numbers.
-
-\
-
-Write a definition for $B$ using only mathematical notation. \\
- (You may use the words ``and", ``or", and ``such that".)
- \end{frame}
 
 %-----------------------------
 
@@ -146,23 +142,70 @@ What are the following sets?
 		\item  \DS{F = \{ x \in [0,1] \, : \, y \in \R, \, x < y \} } 
 	\end{enumerate}
 \end{frame}
-
 %-----------------------------
+
 \begin{frame}
-\frametitle{Functions and quantifiers}
+\frametitle{Describing a new set}
 
-Let $f$ be a function with domain $\R$.  Rewrite the following statements using $\forall$ or $\exists$:
+An irrational number is a number that is real but not rational.
 
+\
+
+
+$B$ is the set of positive, rational numbers and negative, irrational numbers.
+
+\
+
+	{\bfseries Write a definition for $B$ using only mathematical notation.} \\
+ (You may use the words ``and", ``or", and ``such that".)
+ \end{frame}
+
+\begin{frame}
+\frametitle{MAT137 Lecture 3 --- Negation}
+	\textbf{Warmup:}
+	\vfill
+
+	Let \[H=\{\text{ humans }\}\]
+	\[M=\{\text{ human mothers }\}\]
+
+	Write $M=\{x\in H:\ \ \ ??? \ \  \}$ using set-builder notation.
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 1.7, 1.8, 1.9 }
+		\end{itemize}
+	\vfill
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Mother}
+	\vfill
+
+	Let \[H=\{\text{ humans }\}\]
+
+	Which statements are True/False?
+	\begin{enumerate}
+		\item $\displaystyle{\forall x\in H,\, \exists y\in H\text{ such that $y$ gave birth to $x$}}$
+		\item $\displaystyle{\exists x\in H,\text{ such that } \forall y\in H, \text{ $y$ gave birth to $x$}}$
+	\end{enumerate}
+
+	\vfill
+
+\end{frame}
+%------------------------------
+
+\begin{frame}[t]
+\frametitle{Even numbers}
+
+Which of these is a correct description of the set $E$ of even integers?
 \begin{enumerate}
-	\item  The graph of $f$ intercepts the $x$-axis.
-	\item  $f$ is the zero function.
-	\item  $f$ is not the zero function.
-	\item  $f$ never vanishes.
-	\item  The equation \DS{f(x)=0} has a solution.
-	\item  The equation \DS{f(x)=0} has no solutions.
-	\item $f$ takes both positive and negative values.
-	\item $f$ is never negative.
+	\item \DS{	E = \{  n \in \Z \; : \; \forall a \in \Z,  \, n = 2a \} }
+	\item \DS{	E = \{  n \in \Z \; : \; \exists a \in \Z \mbox{ s.t. } n = 2a \} }
 \end{enumerate}
+
+\vfill 
 
 
 \end{frame}
@@ -188,6 +231,160 @@ Write the negation of these statements as simply as possible:
 	
 	\end{center}	
 \end{frame}
+
+
+%-----------------------------
+\begin{frame}
+\frametitle{Functions and quantifiers}
+
+Let $f$ be a function with domain $\R$.  Rewrite the following statements using $\forall$ or $\exists$:
+
+\begin{enumerate}
+	\item  The graph of $f$ intercepts the $x$-axis.
+	\item  $f$ is the zero function.
+	\item  $f$ is not the zero function.
+	\item  $f$ never vanishes.
+	\item  The equation \DS{f(x)=0} has a solution.
+	\item  The equation \DS{f(x)=0} has no solutions.
+	\item $f$ takes both positive and negative values.
+	\item $f$ is never negative.
+\end{enumerate}
+
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{MAT137 Lecture 4 --- Conditionals}
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 1.10, 1.11, 1.12, 1.13 }
+		\end{itemize}
+	\vfill
+
+\end{frame}
+
+%-----------------------------
+
+\begin{frame}
+\frametitle{ Conditionals - True or False?}
+
+
+Let \DS{x \in \R}.  
+
+	\begin{enumerate}
+		\item \DS{x > 0 \quad \implies \quad x \geq 0}
+		\item \DS{x \geq 0 \quad \implies \quad x > 0}
+		
+		\vfill \p
+		
+		\item IF \DS{2 > 3}  THEN Jason is in love.
+	\end{enumerate}
+
+\vfill
+
+\end{frame}
+
+%-----------------------------
+
+\begin{frame}
+\frametitle{Hockey}
+
+Which of the following statements are equivalent to the statement \quad
+\emph{``Every Canadian man likes hockey''}? 
+
+	\begin{enumerate}
+		\item  If a man is Canadian, then he likes hockey.
+		\item  If a man likes hockey, then he is Canadian.
+		\item  If a man does not like hockey, then he is not Canadian.
+		\item  If a man is not Canadian, then he likes hockey.
+		\item  Non-Canadian men do not like hockey.
+		\item  If a Canadian does not like hockey, then she is not a man.
+	\end{enumerate}
+\end{frame}
+
+%-----------------------------
+
+\begin{frame}
+\frametitle{Negation of conditionals}
+
+Write the negation of these statements:
+	\begin{enumerate}
+		\item  If Justin Trudeau has a brother, then he also has a sister.
+		\item  If a student in this class has a brother, then they also have a sister.
+	\end{enumerate}	
+\end{frame}
+
+%------------------------------
+
+\begin{frame}
+\frametitle{Cards}
+
+Take a look at the following cards.
+
+\begin{center}
+\begin{tikzpicture}
+\draw [thick] (0,0)--(0,2)--(1.5,2)--(1.5,0)--(0,0);
+\draw [thick] (3,0)--(3,2)--(4.5,2)--(4.5,0)--(3,0);
+\draw [thick] (6,0)--(6,2)--(7.5,2)--(7.5,0)--(6,0);
+\draw [thick] (9,0)--(9,2)--(10.5,2)--(10.5,0)--(9,0);
+\node [below] at (0.6,1.5) {\Huge{\hyperlink{ee}{{ E}}
+}};
+\node [below] at (3.6,1.5) {\Huge{ 3}};
+\node [below] at (6.6,1.5) {\Huge{ P}};
+\node [below] at (9.6,1.5) {\Huge{ 8}};
+\end{tikzpicture}
+\end{center}
+
+Each card has a letter on one side and a number on the other, and I tell you:
+
+\medskip
+\begin{block}{}
+		 \emph{``\textbf{If} a card has a vowel on one side, \\ 
+		 \textbf{then} it has an odd number on the other side." }
+\end{block}
+
+	
+\medskip
+Which cards do you need to turn over in order to verify whether I am telling the truth or not?
+
+%
+%
+%%%\Large
+%
+%Four cards lie on the table in front of you.  You know that each card has a letter on one side and a number on the other.  At the moment, you can read the symbols $E$, $P$, $3$, and $8$ on the sides that are up.  I tell you:
+%
+%\vfill
+%
+%\begin{block}{}
+%		 \emph{``\textbf{If} a card has a vowel on one side, \\ 
+%		 \textbf{then} it has an odd number on the other side." }
+%\end{block}
+%
+%\vfill
+%
+%Which cards do you need to turn over in order to verify whether I am telling the truth or not?
+\end{frame}
+
+%------------------------------
+
+\begin{frame}
+\frametitle{Cards - 2}
+
+Four cards lie on the table in front of you.  You know that each card has a letter on one side and a number on the other.  
+
+\
+
+{\bf Negate} the following statement:
+\begin{block}{}
+		 \emph{``\textbf{If} a card has a vowel on one side, \\ 
+		 \textbf{then} it has an odd number on the other side." }
+\end{block}
+\end{frame}
+
+
 
 %-----------------------------
 \begin{frame}
@@ -272,52 +469,6 @@ Write a description of the set $E$ of even integers using set-building notation.
 
 \end{frame}
 
-%------------------------------
-
-\begin{frame}[t]
-\frametitle{Even numbers}
-
-Which of these is a correct description of the set $E$ of even integers?
-\begin{enumerate}
-	\item \DS{	E = \{  n \in \Z \; : \; \forall a \in \Z,  \, n = 2a \} }
-	\item \DS{	E = \{  n \in \Z \; : \; \exists a \in \Z \mbox{ s.t. } n = 2a \} }
-\end{enumerate}
-
-\vfill  \p
-
-Which of these statements is true?
-\begin{enumerate}
-\addtocounter{enumi}{2}
-	\item  \DS{\forall a \in \Z}, the number \DS{n=2a} is even.
-	\item  \DS{\exists a \in \Z} s.t. the number \DS{n=2a} is even.
-\end{enumerate}
-
-\vfill
-
-\end{frame}
-
-%-----------------------------
-\begin{frame}
-\frametitle{Mother}
-
-Let
-	$$
-		H = \{ \mbox{ humans } \}
-	$$
-
-\vfill
-
-True or False?
-
-
-\begin{enumerate}
-	\item  \DS{\forall x \in H, \; \exists y \in H} \mbox{ such that } $y$ gave birth to $x$
-	\item  \DS{\exists y \in H \mbox{ such that } \forall x \in H}, $y$ gave birth to $x$ 
-\end{enumerate}
-
-\vfill
-
-\end{frame}
 
 %----------------------------
 \begin{frame}
@@ -350,123 +501,6 @@ Construct a function $f$ that satisfies all of the following properties at once:
 	\end{itemize}
 
 \end{frame}
-%-----------------------------
-
-\begin{frame}
-\frametitle{ Conditionals - True or False?}
-
-
-Let \DS{x \in \R}.  
-
-	\begin{enumerate}
-		\item \DS{x > 0 \quad \implies \quad x \geq 0}
-		\item \DS{x \geq 0 \quad \implies \quad x > 0}
-		
-		\vfill \p
-		
-		\item IF \DS{2 > 3}  THEN Alfonso is in love.
-	\end{enumerate}
-
-\vfill
-
-\end{frame}
-%-----------------------------
-
-\begin{frame}
-\frametitle{Negation of conditionals}
-
-Write the negation of these statements:
-	\begin{enumerate}
-		\item  If Justin Trudeau has a brother, then he also has a sister.
-		\item  If a student in this class has a brother, then they also have a sister.
-	\end{enumerate}	
-\end{frame}
-
-%------------------------------
-
-\begin{frame}
-\frametitle{Cards}
-
-Take a look at the following cards.
-
-\begin{center}
-\begin{tikzpicture}
-\draw [thick] (0,0)--(0,2)--(1.5,2)--(1.5,0)--(0,0);
-\draw [thick] (3,0)--(3,2)--(4.5,2)--(4.5,0)--(3,0);
-\draw [thick] (6,0)--(6,2)--(7.5,2)--(7.5,0)--(6,0);
-\draw [thick] (9,0)--(9,2)--(10.5,2)--(10.5,0)--(9,0);
-\node [below] at (0.6,1.5) {\Huge{\hyperlink{ee}{{ E}}
-}};
-\node [below] at (3.6,1.5) {\Huge{ 3}};
-\node [below] at (6.6,1.5) {\Huge{ P}};
-\node [below] at (9.6,1.5) {\Huge{ 8}};
-\end{tikzpicture}
-\end{center}
-
-Each card has a letter on one side and a number on the other, and I tell you:
-
-\medskip
-\begin{block}{}
-		 \emph{``\textbf{If} a card has a vowel on one side, \\ 
-		 \textbf{then} it has an odd number on the other side." }
-\end{block}
-
-	
-\medskip
-Which cards do you need to turn over in order to verify whether I am telling the truth or not?
-
-%
-%
-%%%\Large
-%
-%Four cards lie on the table in front of you.  You know that each card has a letter on one side and a number on the other.  At the moment, you can read the symbols $E$, $P$, $3$, and $8$ on the sides that are up.  I tell you:
-%
-%\vfill
-%
-%\begin{block}{}
-%		 \emph{``\textbf{If} a card has a vowel on one side, \\ 
-%		 \textbf{then} it has an odd number on the other side." }
-%\end{block}
-%
-%\vfill
-%
-%Which cards do you need to turn over in order to verify whether I am telling the truth or not?
-\end{frame}
-
-%------------------------------
-
-\begin{frame}
-\frametitle{Cards - 2}
-
-Four cards lie on the table in front of you.  You know that each card has a letter on one side and a number on the other.  
-
-\
-
-{\bf Negate} the following statement:
-\begin{block}{}
-		 \emph{``\textbf{If} a card has a vowel on one side, \\ 
-		 \textbf{then} it has an odd number on the other side." }
-\end{block}
-\end{frame}
-
-%-----------------------------
-
-\begin{frame}
-\frametitle{Hockey}
-
-Which of the following statements are equivalent to the statement \quad
-\emph{``Every Canadian man likes hockey''}? 
-
-	\begin{enumerate}
-		\item  If a man is Canadian, then he likes hockey.
-		\item  If a man likes hockey, then he is Canadian.
-		\item  If a man does not like hockey, then he is not Canadian.
-		\item  If a man is not Canadian, then he likes hockey.
-		\item  Non-Canadian men do not like hockey.
-		\item  If a Canadian does not like hockey, then she is not a man.
-	\end{enumerate}
-\end{frame}
-
 %-----------------------------
 
 \begin{frame}
