--- a/unit-1/137-CA-01.tex
+++ b/unit-1/137-CA-01.tex
@@ -116,7 +116,7 @@ What are the following sets?
 
 What are the following sets? 
 
-	{\small Write the explicitly or with interval notation}
+	{\small Write explicitly or with interval notation}
 
 	\bigskip
 	\begin{enumerate} 
