--- a/unit-1/137-CA-01.tex
+++ b/unit-1/137-CA-01.tex
@@ -162,13 +162,19 @@ $B$ is the set of positive, rational numbers and negative, irrational numbers.
 
 \begin{frame}
 \frametitle{MAT137 Lecture 3 --- Negation}
-	\textbf{Warmup:}
+	\textbf{Homework review:}
 	\vfill
 
-	Let \[H=\{\text{ humans }\}\]
-	\[M=\{\text{ human mothers }\}\]
+	If possible, write the following sets with interval notation
+	\begin{enumerate}
+		\item  \DS{A = \{ x \in \R \, : \, \forall y \in [0,1], \, x < y \} }
+		\item  \DS{B = \{ x \in \R \, : \, \exists y \in [0,1] \mbox{ s.t. } x < y \} }
+		\item  \DS{C = \{ x \in [0,1] \, : \, \forall y \in [0,1], x < y \} }
+		\item  \DS{D = \{ x \in [0,1] \, : \, \exists y \in [0,1] \mbox{ s.t. } x < y \} }
+		\item  \DS{E = \{ x \in [0,1] \, : \, \exists y \in \R \mbox{ s.t. } x < y \} }
+		\item  \DS{F = \{ x \in [0,1] \, : \, y \in \R, \, x < y \} } 
+	\end{enumerate}
 
-	Write $M=\{x\in H:\ \ \ ??? \ \  \}$ using set-builder notation.
 
 	\vfill
 	{\bf Before next class:}
