--- a/unit-1/137-CA-01.tex
+++ b/unit-1/137-CA-01.tex
@@ -296,6 +296,25 @@ Let \DS{x \in \R}.
 %-----------------------------
 
 \begin{frame}
+\frametitle{ Cookies }
+
+
+	Rewrite the following statement as an ``IF, \ldots THEN'' statement and as an implication (using $\implies$). 
+	\begin{itemize}
+		\item \textbf{A teacher promises to give a cookie to any student who gets 100 on the test.}
+		\bigskip\p
+		\item No student gets 100.
+		\item The teacher doesn't give out any cookies.
+		\vfill
+		\item Did the teacher lie?
+	\end{itemize}
+
+\vfill
+
+\end{frame}
+%-----------------------------
+
+\begin{frame}
 \frametitle{Hockey}
 
 Which of the following statements are equivalent to the statement \quad
@@ -307,7 +326,7 @@ Which of the following statements are equivalent to the statement \quad
 		\item  If a man does not like hockey, then he is not Canadian.
 		\item  If a man is not Canadian, then he likes hockey.
 		\item  Non-Canadian men do not like hockey.
-		\item  If a Canadian does not like hockey, then she is not a man.
+		\item  If a Canadian does not like hockey, then they are not a man.
 	\end{enumerate}
 \end{frame}
 
