--- a/unit-1/137-CA-01.tex
+++ b/unit-1/137-CA-01.tex
@@ -570,6 +570,79 @@ Suppose I give you a specific function $f$ and I ask you to prove it is one-to-o
 
 \end{frame}
 
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 6 --- Proofs \& Induction}
+
+	{\bf Warmup:}
+
+	For each of the following statements, list {\bf all} conditions under which it is false.
+	\begin{itemize}
+		\item If a student gets a 100 on the test, I will give them a cookie.
+		\item If I check out a library book, I will return it.
+		\item If there is an elephant in this room, it is pink.
+	\end{itemize}
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 2.4 }
+		\end{itemize}
+	\vfill
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Cookies Redux}
+	\textbf{A teacher promises to give a cookie to any student who gets 100 on the test.}
+	\begin{itemize}
+		\bigskip
+		\item No student gets 100.
+		\item The teacher doesn't give out any cookies.
+		\vfill
+		\item Did the teacher lie?
+	\end{itemize}
+
+\vfill
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Library Redux}
+	The law says ``{\bf if you check out a library book, you must return it}''.
+	\begin{itemize}
+		\item I did not check out any library books.
+		\item I did not return any library books.
+	\end{itemize}
+	Did I violate the law?
+\vfill
+\end{frame}
+
+\begin{frame}
+\frametitle{Elephant Redux}
+	Consider the statement ``{\bf if this room contains an elephant, that elephant is pink}''.
+
+	The facts are:
+	\begin{itemize}
+		\item This room contains no elephants.
+		\item If there were an elephant in this room, it would come from the zoo and would be a grey elephant.
+	\end{itemize}
+	Is the statement true or false?
+\vfill
+\end{frame}
+
+\begin{frame}
+\frametitle{My Mind}
+	Consider the statements
+	\begin{enumerate}
+		\item If I have a favorite number, then it is an even number.
+		\item If I have a favorite number, then it is an odd number.
+	\end{enumerate}
+	Can both statements be true at the same time?
+\vfill
+\end{frame}
+
+
 %-----------------------------
 \begin{frame}[t]
 \fontsize{13}{13}\selectfont
@@ -601,18 +674,6 @@ Suppose I give you a specific function $f$ and I ask you to prove it is not one-
 
 \end{frame}
 
-
-\begin{frame}
-	\frametitle{MAT137 Lecture 6 --- Proofs \& Induction}
-
-	\vfill
-	{\bf Before next class:}
-		\begin{itemize} \normalsize
-			\item {\bf Watch videos 2.4 }
-		\end{itemize}
-	\vfill
-
-\end{frame}
 
 
 %------------------------------
