--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -74,21 +74,42 @@
 
 \newcommand{\floor}[1]{\lfloor #1 \rfloor}
 
+
+\setbeamertemplate{enumerate items}{(\Alph{enumi})}
+
+
 %===================================================
 \begin{document}
 %===================================================
+
+\begin{frame}
+\frametitle{MAT137 Lecture 7 --- Absolute Values}
+
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 2.1, 2.2, 2.3 }
+		\end{itemize}
+	\vfill
+
+\end{frame}
 
 %-----------------------------
 \begin{frame}
 \frametitle{Properties of absolute value}
 
 
-Let $a, b \in \mathbb{R}$.  What can we conclude?
+Let $a, b \in \mathbb{R}$.  
+	Are the following conclusions correct?
 
+	\vfill
 \begin{enumerate}
 	\item  \DS{ |ab|  = |a| |b|}
 	\item  \DS{ |a + b | = |a| + |b|}
 \end{enumerate}
+
+\vfill
 
 If any of the conclusions is wrong, fix it.
 
@@ -100,7 +121,8 @@ If any of the conclusions is wrong, fix it.
 \frametitle{Properties of inequalities}
 
 Let $a, b, c \in \mathbb{R}$.  \\
- Assume $a < b$.  What can we conclude?
+ Assume $a < b$.  
+	Are the following conclusions correct?
 
 \begin{enumerate}
 \begin{multicols}{2}
@@ -117,9 +139,13 @@ Let $a, b, c \in \mathbb{R}$.  \\
 	
 	\
 	\item  \DS{\frac{1}{a} < \frac{1}{b}}	
+	
+	\
+	\item  \DS{\sin a<\sin b}	
 \end{multicols}
 \end{enumerate}
 
+\vfill
 If any of the conclusions is wrong, fix it.
 
 \end{frame}
@@ -130,7 +156,7 @@ If any of the conclusions is wrong, fix it.
 
 
 Let $a \in \R$.  Let $\delta >0$.  \\
-What are the following sets?  Describe them using intervals
+Describe the following sets using interval notation.
 
 \begin{enumerate}
 	\item  \DS{A = \{x \in \R \; : \; |x| < \delta\} }
@@ -145,15 +171,21 @@ What are the following sets?  Describe them using intervals
 \begin{frame}
 \frametitle{Implications}
 
-Find \emph{all} positive values of $A$, $B$, and $C$ which make the following implications true.
+Find \emph{all} positive values of $X$, $Y$, and $Z$ which make the following implications true.
 
+\vfill
 \begin{enumerate}
-	\item  \DS{| x-3 | <  1  \implies |2x-6| < A}
-	\item   \DS{|x-3| < B \implies |2x-6| < 1}
-\p
-	\item  \DS{|x-3| < 1 \implies |x+5| < C}
-\end{enumerate}
+	\item  \DS{| t-3 | <  1  \implies |2t-6| < X}
+	
+		\
 
+	\item   \DS{|t-3| < Y \implies |2t-6| < 1}
+
+		\
+
+	\item  \DS{|t-3| < 1 \implies |t+5| < Z}
+\end{enumerate}
+\vfill
 
 \end{frame}
 %-----------------------------
