--- a/unit-1/137-CA-01.tex
+++ b/unit-1/137-CA-01.tex
@@ -594,14 +594,14 @@ Suppose I give you a specific function $f$ and I ask you to prove it is one-to-o
 
 \begin{frame}
 \frametitle{Cookies Redux}
-	\textbf{A teacher promises to give a cookie to any student who gets 100 on the test.}
+	A teacher promises: \textbf{If a student gets a 100 on the test, then I will give them a cookie.}
 	\begin{itemize}
 		\bigskip
 		\item No student gets 100.
 		\item The teacher doesn't give out any cookies.
-		\vfill
-		\item Did the teacher lie?
 	\end{itemize}
+		\vfill
+	Did the teacher lie?
 
 \vfill
 
@@ -609,11 +609,14 @@ Suppose I give you a specific function $f$ and I ask you to prove it is one-to-o
 
 \begin{frame}
 \frametitle{Library Redux}
-	The law says ``{\bf if you check out a library book, you must return it}''.
+	The law says, ``{\bf If you check out a library book, you must return it}''.
+	\bigskip
 	\begin{itemize}
 		\item I did not check out any library books.
 		\item I did not return any library books.
 	\end{itemize}
+
+	\vfill
 	Did I violate the law?
 \vfill
 \end{frame}
@@ -622,11 +625,13 @@ Suppose I give you a specific function $f$ and I ask you to prove it is one-to-o
 \frametitle{Elephant Redux}
 	Consider the statement ``{\bf if this room contains an elephant, that elephant is pink}''.
 
+	\bigskip
 	The facts are:
 	\begin{itemize}
 		\item This room contains no elephants.
 		\item If there were an elephant in this room, it would come from the zoo and would be a grey elephant.
 	\end{itemize}
+	\vfill
 	Is the statement true or false?
 \vfill
 \end{frame}
@@ -634,10 +639,13 @@ Suppose I give you a specific function $f$ and I ask you to prove it is one-to-o
 \begin{frame}
 \frametitle{My Mind}
 	Consider the statements
+	\bigskip
 	\begin{enumerate}
 		\item If I have a favorite number, then it is an even number.
 		\item If I have a favorite number, then it is an odd number.
 	\end{enumerate}
+
+	\vfill
 	Can both statements be true at the same time?
 \vfill
 \end{frame}
@@ -659,7 +667,7 @@ We say $f$ is one-to-one when
 
 \vfill  \p
 
-Suppose I give you a specific function $f$ and I ask you to prove it is not one-to-one. \pause  You need to prove $f$ satisfies the \emph{negation} of the definition.
+	Suppose I give you a specific function $f$ and I ask you to prove it is \textbf{not} one-to-one. \pause  You need to prove $f$ satisfies the \emph{negation} of the definition.
 	\begin{itemize}
 		\item  Write the negation of the first definition.
 		\item  Write the negation of the second definition.
@@ -684,7 +692,8 @@ Let $S_n$ be a statement depending on a positive integer $n$.
 
 \vfill  
 
-What conclusions can you draw in each of the following cases?
+	What conclusions can you draw in each of the following cases? (I.e., for which $n$ do you
+	know that $S_n$ is true?)
 
 \vfill 
 
