--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -97,7 +97,7 @@
 			\item Let $n=2$. Then, $n\in \mathbb N$ and $n^2=4$.
 
 
-			\item 		Let $n\in \mathbb N$. Take $n=2$. Then $n^2=4$.
+			\item 		Take $n\in \mathbb N$. Let $n=2$. Then $n^2=4$.
 
 		\columnbreak
 
