--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -336,6 +336,16 @@ Find \emph{all} positive values of $X$, $Y$, and $Z$ which make the following im
 
 \begin{frame}
 \frametitle{MAT137 Lecture 8 --- Limits}
+	{\bf Warmup:}
+
+	Let $a,b,c\in \mathbb R$. Determine whether the following statements are true or false.
+	\begin{enumerate}
+		\item $a>b\implies ac > bc$
+		\item $a>b\implies\text{ not }(ac>bc)$
+		\item $\text{not }(a>b)\implies ac>bc$
+		\item $\text{not }\Big(a>b\implies ac>bc\Big)$
+	\end{enumerate}
+
 	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
@@ -418,6 +428,15 @@ Find the value of
 %-----------------------------
 \begin{frame}
 \frametitle{MAT137 Lecture 9 --- Definition of Limit}
+	{\bf Warmup:}
+
+	Compute the follwoing limits
+
+	\bigskip
+		\begin{enumerate}
+			\item \DS{\lim_{x \to 0} \; \floor{x}}
+			\item \DS{\lim_{x \to 0} \; \floor{x^2}}
+		\end{enumerate}
 	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
@@ -497,7 +516,7 @@ Write a formal definition for
 \end{frame}
 %-----------------------
 \begin{frame}[t]
-\frametitle{Infinite limits - 2}
+\frametitle{Infinite limits 2}
 
 Which one(s) is the definition of \DS{\lim_{x \to a} f(x) = \infty } ?
 \vfill
